1401_dejuan_Sanz_Victor_sinta/src/y.output
Nonterminals useless in grammar

   funcion
   parametros_funcion
   resto_parametros_funcion
   parametro_funcion
   declaraciones_funcion


Terminals unused in grammar

   TOK_FUNCTION
   TOK_JUMP
   TOK_LINE_UP
   TOK_COL_UP
   TOK_ERROR
   TOK_ERROR_LONG


Rules useless in grammar

   65 funciones: funcion funciones

   66 funcion: funcion tipo identificador '(' parametros_funcion ')' '{'

   67 parametros_funcion: parametro_funcion resto_parametros_funcion
   68                   | %empty

   69 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   70                         | %empty

   71 parametro_funcion: tipo identificador

   72 declaraciones_funcion: declaraciones
   73                      | %empty


State 70 conflicts: 6 shift/reduce
State 71 conflicts: 6 shift/reduce
State 92 conflicts: 6 shift/reduce
State 93 conflicts: 6 shift/reduce
State 94 conflicts: 6 shift/reduce
State 95 conflicts: 6 shift/reduce
State 96 conflicts: 6 shift/reduce
State 97 conflicts: 6 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: main '{' declaraciones funciones sentencias '}'

    2 main: TOK_MAIN

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: clase identificadores ';'

    6 clase: clase_escalar
    7      | clase_vector

    8 clase_escalar: tipo

    9 tipo: TOK_INT
   10     | TOK_BOOLEAN

   11 clase_vector: TOK_ARRAY tipo '[' constante_entera ']'

   12 identificadores: identificador
   13                | identificador ',' identificadores

   14 funciones: %empty

   15 sentencias: sentencia
   16           | sentencia sentencias

   17 sentencia: sentencia_simple ';'
   18          | bloque

   19 sentencia_simple: asignacion
   20                 | lectura
   21                 | escritura
   22                 | retorno_funcion

   23 bloque: condicional
   24       | bucle

   25 asignacion: identificador '=' exp
   26           | elemento_vector '=' exp

   27 elemento_vector: identificador '[' exp ']'

   28 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   29            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   30 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   31 lectura: TOK_SCANF identificador

   32 escritura: TOK_PRINTF exp

   33 retorno_funcion: TOK_RETURN exp

   34 exp: exp '+' exp
   35    | exp '-' exp
   36    | exp '/' exp
   37    | exp '*' exp
   38    | '-' exp
   39    | exp TOK_AND exp
   40    | exp TOK_OR exp
   41    | '!' exp
   42    | identificador
   43    | constante
   44    | '(' exp ')'
   45    | '(' comparacion ')'
   46    | elemento_vector
   47    | identificador '(' lista_expresiones ')'

   48 lista_expresiones: exp resto_lista_expresiones
   49                  | %empty

   50 resto_lista_expresiones: ',' exp resto_lista_expresiones

   51 $@1: %empty

   52 resto_lista_expresiones: $@1

   53 comparacion: exp TOK_IGUAL exp
   54            | exp TOK_DISTINTO exp
   55            | exp TOK_MENORIGUAL exp
   56            | exp TOK_MAYORIGUAL exp
   57            | exp '<' exp
   58            | exp '>' exp

   59 constante: constante_logica
   60          | constante_entera

   61 constante_logica: TOK_TRUE
   62                 | TOK_FALSE

   63 constante_entera: TOK_CONSTANTE_ENTERA

   64 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'(' (40) 28 29 30 44 45 47
')' (41) 28 29 30 44 45 47
'*' (42) 37
'+' (43) 34
',' (44) 13 50
'-' (45) 35 38
'/' (47) 36
';' (59) 5 17
'<' (60) 57
'=' (61) 25 26
'>' (62) 58
'[' (91) 11 27
']' (93) 11 27
'{' (123) 1 28 29 30
'}' (125) 1 28 29 30
error (256)
TOK_MAIN (258) 2
TOK_INT (259) 9
TOK_BOOLEAN (260) 10
TOK_ARRAY (261) 11
TOK_FUNCTION (262)
TOK_IF (263) 28 29
TOK_ELSE (264) 29
TOK_WHILE (265) 30
TOK_SCANF (266) 31
TOK_PRINTF (267) 32
TOK_RETURN (268) 33
TOK_AND (269) 39
TOK_OR (270) 40
TOK_IGUAL (271) 53
TOK_DISTINTO (272) 54
TOK_MENORIGUAL (273) 55
TOK_MAYORIGUAL (274) 56
TOK_IDENTIFICADOR (275) 64
TOK_CONSTANTE_ENTERA (276) 63
TOK_TRUE (277) 61
TOK_FALSE (278) 62
TOK_JUMP (279)
TOK_LINE_UP (280)
TOK_COL_UP (281)
TOK_ERROR (282)
TOK_ERROR_LONG (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
programa (46)
    on left: 1, on right: 0
main (47)
    on left: 2, on right: 1
declaraciones (48)
    on left: 3 4, on right: 1 4
declaracion (49)
    on left: 5, on right: 3 4
clase (50)
    on left: 6 7, on right: 5
clase_escalar (51)
    on left: 8, on right: 6
tipo (52)
    on left: 9 10, on right: 8 11
clase_vector (53)
    on left: 11, on right: 7
identificadores (54)
    on left: 12 13, on right: 5 13
funciones (55)
    on left: 14, on right: 1
sentencias (56)
    on left: 15 16, on right: 1 16 28 29 30
sentencia (57)
    on left: 17 18, on right: 15 16
sentencia_simple (58)
    on left: 19 20 21 22, on right: 17
bloque (59)
    on left: 23 24, on right: 18
asignacion (60)
    on left: 25 26, on right: 19
elemento_vector (61)
    on left: 27, on right: 26 46
condicional (62)
    on left: 28 29, on right: 23
bucle (63)
    on left: 30, on right: 24
lectura (64)
    on left: 31, on right: 20
escritura (65)
    on left: 32, on right: 21
retorno_funcion (66)
    on left: 33, on right: 22
exp (67)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47, on right: 25
    26 27 28 29 30 32 33 34 35 36 37 38 39 40 41 44 48 50 53 54 55
    56 57 58
lista_expresiones (68)
    on left: 48 49, on right: 47
resto_lista_expresiones (69)
    on left: 50 52, on right: 48 50
$@1 (70)
    on left: 51, on right: 52
comparacion (71)
    on left: 53 54 55 56 57 58, on right: 45
constante (72)
    on left: 59 60, on right: 43
constante_logica (73)
    on left: 61 62, on right: 59
constante_entera (74)
    on left: 63, on right: 11 60
identificador (75)
    on left: 64, on right: 12 13 25 27 31 42 47


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2
    main      go to state 3


State 1

    2 main: TOK_MAIN .

    $default  reduce using rule 2 (main)


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: main . '{' declaraciones funciones sentencias '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: main '{' . declaraciones funciones sentencias '}'

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 6

    9 tipo: TOK_INT .

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: TOK_BOOLEAN .

    $default  reduce using rule 10 (tipo)


State 8

   11 clase_vector: TOK_ARRAY . tipo '[' constante_entera ']'

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 15


State 9

    1 programa: main '{' declaraciones . funciones sentencias '}'

    $default  reduce using rule 14 (funciones)

    funciones  go to state 16


State 10

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 3 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    5 declaracion: clase . identificadores ';'

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 19
    identificador    go to state 20


State 12

    6 clase: clase_escalar .

    $default  reduce using rule 6 (clase)


State 13

    8 clase_escalar: tipo .

    $default  reduce using rule 8 (clase_escalar)


State 14

    7 clase: clase_vector .

    $default  reduce using rule 7 (clase)


State 15

   11 clase_vector: TOK_ARRAY tipo . '[' constante_entera ']'

    '['  shift, and go to state 21


State 16

    1 programa: main '{' declaraciones funciones . sentencias '}'

    TOK_IF             shift, and go to state 22
    TOK_WHILE          shift, and go to state 23
    TOK_SCANF          shift, and go to state 24
    TOK_PRINTF         shift, and go to state 25
    TOK_RETURN         shift, and go to state 26
    TOK_IDENTIFICADOR  shift, and go to state 18

    sentencias        go to state 27
    sentencia         go to state 28
    sentencia_simple  go to state 29
    bloque            go to state 30
    asignacion        go to state 31
    elemento_vector   go to state 32
    condicional       go to state 33
    bucle             go to state 34
    lectura           go to state 35
    escritura         go to state 36
    retorno_funcion   go to state 37
    identificador     go to state 38


State 17

    4 declaraciones: declaracion declaraciones .

    $default  reduce using rule 4 (declaraciones)


State 18

   64 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 64 (identificador)


State 19

    5 declaracion: clase identificadores . ';'

    ';'  shift, and go to state 39


State 20

   12 identificadores: identificador .
   13                | identificador . ',' identificadores

    ','  shift, and go to state 40

    $default  reduce using rule 12 (identificadores)


State 21

   11 clase_vector: TOK_ARRAY tipo '[' . constante_entera ']'

    TOK_CONSTANTE_ENTERA  shift, and go to state 41

    constante_entera  go to state 42


State 22

   28 condicional: TOK_IF . '(' exp ')' '{' sentencias '}'
   29            | TOK_IF . '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '('  shift, and go to state 43


State 23

   30 bucle: TOK_WHILE . '(' exp ')' '{' sentencias '}'

    '('  shift, and go to state 44


State 24

   31 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificador  go to state 45


State 25

   32 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 52
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 26

   33 retorno_funcion: TOK_RETURN . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 57
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 27

    1 programa: main '{' declaraciones funciones sentencias . '}'

    '}'  shift, and go to state 58


State 28

   15 sentencias: sentencia .
   16           | sentencia . sentencias

    TOK_IF             shift, and go to state 22
    TOK_WHILE          shift, and go to state 23
    TOK_SCANF          shift, and go to state 24
    TOK_PRINTF         shift, and go to state 25
    TOK_RETURN         shift, and go to state 26
    TOK_IDENTIFICADOR  shift, and go to state 18

    $default  reduce using rule 15 (sentencias)

    sentencias        go to state 59
    sentencia         go to state 28
    sentencia_simple  go to state 29
    bloque            go to state 30
    asignacion        go to state 31
    elemento_vector   go to state 32
    condicional       go to state 33
    bucle             go to state 34
    lectura           go to state 35
    escritura         go to state 36
    retorno_funcion   go to state 37
    identificador     go to state 38


State 29

   17 sentencia: sentencia_simple . ';'

    ';'  shift, and go to state 60


State 30

   18 sentencia: bloque .

    $default  reduce using rule 18 (sentencia)


State 31

   19 sentencia_simple: asignacion .

    $default  reduce using rule 19 (sentencia_simple)


State 32

   26 asignacion: elemento_vector . '=' exp

    '='  shift, and go to state 61


State 33

   23 bloque: condicional .

    $default  reduce using rule 23 (bloque)


State 34

   24 bloque: bucle .

    $default  reduce using rule 24 (bloque)


State 35

   20 sentencia_simple: lectura .

    $default  reduce using rule 20 (sentencia_simple)


State 36

   21 sentencia_simple: escritura .

    $default  reduce using rule 21 (sentencia_simple)


State 37

   22 sentencia_simple: retorno_funcion .

    $default  reduce using rule 22 (sentencia_simple)


State 38

   25 asignacion: identificador . '=' exp
   27 elemento_vector: identificador . '[' exp ']'

    '['  shift, and go to state 62
    '='  shift, and go to state 63


State 39

    5 declaracion: clase identificadores ';' .

    $default  reduce using rule 5 (declaracion)


State 40

   13 identificadores: identificador ',' . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 64
    identificador    go to state 20


State 41

   63 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 63 (constante_entera)


State 42

   11 clase_vector: TOK_ARRAY tipo '[' constante_entera . ']'

    ']'  shift, and go to state 65


State 43

   28 condicional: TOK_IF '(' . exp ')' '{' sentencias '}'
   29            | TOK_IF '(' . exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 66
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 44

   30 bucle: TOK_WHILE '(' . exp ')' '{' sentencias '}'

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 67
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 45

   31 lectura: TOK_SCANF identificador .

    $default  reduce using rule 31 (lectura)


State 46

   61 constante_logica: TOK_TRUE .

    $default  reduce using rule 61 (constante_logica)


State 47

   62 constante_logica: TOK_FALSE .

    $default  reduce using rule 62 (constante_logica)


State 48

   44 exp: '(' . exp ')'
   45    | '(' . comparacion ')'

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 68
    comparacion       go to state 69
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 49

   38 exp: '-' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 70
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 50

   41 exp: '!' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 71
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 51

   46 exp: elemento_vector .

    $default  reduce using rule 46 (exp)


State 52

   32 escritura: TOK_PRINTF exp .
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    $default  reduce using rule 32 (escritura)


State 53

   43 exp: constante .

    $default  reduce using rule 43 (exp)


State 54

   59 constante: constante_logica .

    $default  reduce using rule 59 (constante)


State 55

   60 constante: constante_entera .

    $default  reduce using rule 60 (constante)


State 56

   27 elemento_vector: identificador . '[' exp ']'
   42 exp: identificador .
   47    | identificador . '(' lista_expresiones ')'

    '['  shift, and go to state 62
    '('  shift, and go to state 78

    $default  reduce using rule 42 (exp)


State 57

   33 retorno_funcion: TOK_RETURN exp .
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    $default  reduce using rule 33 (retorno_funcion)


State 58

    1 programa: main '{' declaraciones funciones sentencias '}' .

    $default  reduce using rule 1 (programa)


State 59

   16 sentencias: sentencia sentencias .

    $default  reduce using rule 16 (sentencias)


State 60

   17 sentencia: sentencia_simple ';' .

    $default  reduce using rule 17 (sentencia)


State 61

   26 asignacion: elemento_vector '=' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 79
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 62

   27 elemento_vector: identificador '[' . exp ']'

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 80
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 63

   25 asignacion: identificador '=' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 81
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 64

   13 identificadores: identificador ',' identificadores .

    $default  reduce using rule 13 (identificadores)


State 65

   11 clase_vector: TOK_ARRAY tipo '[' constante_entera ']' .

    $default  reduce using rule 11 (clase_vector)


State 66

   28 condicional: TOK_IF '(' exp . ')' '{' sentencias '}'
   29            | TOK_IF '(' exp . ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    ')'      shift, and go to state 82
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77


State 67

   30 bucle: TOK_WHILE '(' exp . ')' '{' sentencias '}'
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    ')'      shift, and go to state 83
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77


State 68

   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp
   44    | '(' exp . ')'
   53 comparacion: exp . TOK_IGUAL exp
   54            | exp . TOK_DISTINTO exp
   55            | exp . TOK_MENORIGUAL exp
   56            | exp . TOK_MAYORIGUAL exp
   57            | exp . '<' exp
   58            | exp . '>' exp

    TOK_AND         shift, and go to state 72
    TOK_OR          shift, and go to state 73
    TOK_IGUAL       shift, and go to state 84
    TOK_DISTINTO    shift, and go to state 85
    TOK_MENORIGUAL  shift, and go to state 86
    TOK_MAYORIGUAL  shift, and go to state 87
    ')'             shift, and go to state 88
    '+'             shift, and go to state 74
    '-'             shift, and go to state 75
    '/'             shift, and go to state 76
    '*'             shift, and go to state 77
    '<'             shift, and go to state 89
    '>'             shift, and go to state 90


State 69

   45 exp: '(' comparacion . ')'

    ')'  shift, and go to state 91


State 70

   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   38    | '-' exp .
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    TOK_AND   [reduce using rule 38 (exp)]
    TOK_OR    [reduce using rule 38 (exp)]
    '+'       [reduce using rule 38 (exp)]
    '-'       [reduce using rule 38 (exp)]
    '/'       [reduce using rule 38 (exp)]
    '*'       [reduce using rule 38 (exp)]
    $default  reduce using rule 38 (exp)


State 71

   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp
   41    | '!' exp .

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    TOK_AND   [reduce using rule 41 (exp)]
    TOK_OR    [reduce using rule 41 (exp)]
    '+'       [reduce using rule 41 (exp)]
    '-'       [reduce using rule 41 (exp)]
    '/'       [reduce using rule 41 (exp)]
    '*'       [reduce using rule 41 (exp)]
    $default  reduce using rule 41 (exp)


State 72

   39 exp: exp TOK_AND . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 92
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 73

   40 exp: exp TOK_OR . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 93
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 74

   34 exp: exp '+' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 94
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 75

   35 exp: exp '-' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 95
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 76

   36 exp: exp '/' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 96
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 77

   37 exp: exp '*' . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 97
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 78

   47 exp: identificador '(' . lista_expresiones ')'

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    $default  reduce using rule 49 (lista_expresiones)

    elemento_vector    go to state 51
    exp                go to state 98
    lista_expresiones  go to state 99
    constante          go to state 53
    constante_logica   go to state 54
    constante_entera   go to state 55
    identificador      go to state 56


State 79

   26 asignacion: elemento_vector '=' exp .
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    $default  reduce using rule 26 (asignacion)


State 80

   27 elemento_vector: identificador '[' exp . ']'
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    ']'      shift, and go to state 100
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77


State 81

   25 asignacion: identificador '=' exp .
   34 exp: exp . '+' exp
   35    | exp . '-' exp
   36    | exp . '/' exp
   37    | exp . '*' exp
   39    | exp . TOK_AND exp
   40    | exp . TOK_OR exp

    TOK_AND  shift, and go to state 72
    TOK_OR   shift, and go to state 73
    '+'      shift, and go to state 74
    '-'      shift, and go to state 75
    '/'      shift, and go to state 76
    '*'      shift, and go to state 77

    $default  reduce using rule 25 (asignacion)


State 82

   28 condicional: TOK_IF '(' exp ')' . '{' sentencias '}'
   29            | TOK_IF '(' exp ')' . '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '{'  shift, and go to state 101


State 83

   30 bucle: TOK_WHILE '(' exp ')' . '{' sentencias '}'

    '{'  shift, and go to state 102


State 84

   53 comparacion: exp TOK_IGUAL . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 103
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 85

   54 comparacion: exp TOK_DISTINTO . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 104
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 86

   55 comparacion: exp TOK_MENORIGUAL . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50

    elemento_vector   go to state 51
    exp               go to state 105
    constante         go to state 53
    constante_logica  go to state 54
    constante_entera  go to state 55
    identificador     go to state 56


State 87

   56 comparacion: exp TOK_MAYORIGUAL . exp

    TOK_IDENTIFICADOR     shift, and go to state 18
    TOK_CONSTANTE_ENTERA  shift, and go to state 41
    TOK_TRUE              shift, and go to state 46
    TOK_FALSE             shift, and go to state 47
    '('                   shift, and go to state 48
    '-'                   shift, and go to state 49
    '!'                   shift, and go to state 50
